--- a/src/app/deafult-layout/header/header.component.html
+++ b/src/app/deafult-layout/header/header.component.html
@@ -21,7 +21,7 @@
             <mat-icon>person</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
-            <button mat-menu-item onclick="logout()">
+            <button mat-menu-item (click)="logout()">
               <mat-icon>exit_to_app</mat-icon>
               Logout
             </button>
