--- a/src/app/deafult-layout/sidenav/sidenav.component.scss
+++ b/src/app/deafult-layout/sidenav/sidenav.component.scss
@@ -11,13 +11,11 @@
     width: 200px;
   }
   background-color: hsl(204, 24%, 99%, 40%) ;
-  border-radius: 8%;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .mat-list-item {
   padding: 15px 30px;
-  border-radius: 20px;
   color: #ffffff;
   font-size: 15px;
   position: relative;
@@ -25,12 +23,16 @@
   display: block;
   text-decoration: none;
 }
+
+.mat-list-item:hover{
+  background: #0056b3;
+}
+
 .list-item-active {
   background-color: hsl(204, 24%, 99%, 40%) ;
-  color: #1e293b;
+  color: #000000;
   font-size: 20px;
   cursor: pointer;
-  border-radius: 8%;
   transition: all 0.4s ease;
   position: relative;
   overflow: hidden;
@@ -57,6 +59,7 @@
 }
 
 .list-item-active:hover {
-  border-color: #666666;
-  background: #a19d9d;
+  color: #ffffff;
+  border-color: #0056b3;
+  background: #0056b3;
 }
