--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -1,15 +1,18 @@
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 <div class="container">
     <div class="wrapper">
-        <form action="">
+        <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
             <h1>Login</h1>
             <div class="input-box">
-                <input type="text" placeholder="Username" required>
+                <input #username id="username" formControlName="username" type="text" placeholder="Username" required>
                 <mat-icon>person</mat-icon>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="Password" required>
+                <input #password id="password" formControlName="password" type="password" placeholder="Password" required>
                 <mat-icon>password</mat-icon>
+            </div>
+            <div *ngIf="errorMessage" class="error">
+                {{errorMessage}}
             </div>
             <div class="remember-forgot">
                 <label><input type="checkbox">Remember me</label>
