--- a/src/app/deafult-layout/sidenav/sidenav.component.html
+++ b/src/app/deafult-layout/sidenav/sidenav.component.html
@@ -5,4 +5,5 @@
   <div class="navigation" *ngFor="let item of items">
     <a class="mat-list-item" routerLinkActive="list-item-active" routerLink={{item.menuLink}}>{{item.menuName}}</a>
   </div>
+  <a href="https://info.flagcounter.com/zErF"><img src="https://s11.flagcounter.com/count2/zErF/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_20/viewers_0/labels_0/pageviews_1/flags_0/percent_0/" alt="Flag Counter" ></a>
 </mat-nav-list>
