--- a/src/app/style/default.css
+++ b/src/app/style/default.css
@@ -40,6 +40,7 @@ button:hover {
 button:active {
   background-color: #004080;
 }
+
 button[disabled] {
   background-color: #ccc;
   color: #666;
@@ -225,4 +226,31 @@ p-sortIcon{
 .grid-item strong {
   display: block;
   margin-bottom: 5px;
+}
+
+:host >>> .p-dialog {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  width: auto;
+  border-radius: 10px;
+  border: 1px solid #007bff;
+  background-color: #ffffff;
+}
+.p-dialog .ui-dialog-content {
+  padding: 20px;
+}
+
+.p-dialog .ui-dialog-footer {
+  padding: 10px;
+  text-align: right;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.p-dialog .ui-button {
+  background-color: #007bff;
+  border-color: #007bff;
+  color: white;
 }
