--- a/src/app/view/product/product-addProduct/product-add-product/product-add-product.component.html
+++ b/src/app/view/product/product-addProduct/product-add-product/product-add-product.component.html
@@ -1,1 +1,22 @@
-<p>product-add-product works!</p>
+<!-- product-add.component.html -->
+<div>
+    <h2>Add Product</h2>
+    <form>
+      <div class="form-group">
+        <label for="productName">Name</label>
+        <input type="text" id="productName" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="productAliasName">Alias Name</label>
+        <input type="text" id="productAliasName" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="productDescription">Description</label>
+        <input type="text" id="productDescription" class="form-control">
+      </div>
+      <!-- Add other fields as necessary -->
+      <button type="submit" class="btn btn-primary">Save</button>
+    </form>
+    <button type="button" class="btn btn-secondary mt-3" (click)="onClose()">Close</button>
+  </div>
+  
